Fix landing intro container items alignment

--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  align-items: center;
 }
 
 .landing-Intro {
